proflie send datao

--- a/server/login/templates/login/login.html
+++ b/server/login/templates/login/login.html
@@ -52,8 +52,8 @@
             datatype: 'html',
             success: function(result) {
                 //On success
-                console.log(result)
-                console.log(result.status)
+                // console.log(result)
+                // console.log(result.status)
                 if (result.status) {
                     Swal.fire({
                         title: 'Login',
