--- a/server/student/templates/student/cvProfile.html
+++ b/server/student/templates/student/cvProfile.html
@@ -1,21 +1,21 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../../../../static/css/dynamic-fields.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Document</title>
+{% block header %}
+<link rel="stylesheet" type="text/css" href="/static/css/dynamic-fields.css" />
 
-</head>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+
+{% endblock %}
+
+ 
 
 
-<body>
+{% block content %}
 
-    <div class="row">
-
-        <div class="col-md-8 order-md-1" style="margin: 0 auto; width:250px;">
+    <div class="container mt-4 text-dark">
+        
+        {% csrf_token %}
+        <div class="col-md-8 order-md-1" style="margin: 0 auto; width:auto;">
 
             <h4 class="mb-3">Personal Information</h4>
             <form class="needs-validation" novalidate="">
@@ -123,7 +123,7 @@
     </div>
 
     </div>
-</body>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script>
     //show edcution input
@@ -194,7 +194,7 @@
 
 
         $.ajax({
-            url: "/create_cvProfile",
+            url: "/student/create_cvProfile",
             type: 'POST',
             data: {
                 fristName: $("#fristName").val(),
@@ -221,7 +221,7 @@
 
             },
             error: function(jqXHR, textStatus, errorThrown) {
-                alert(xhr.responseText);
+                alert(jqXHR.responseText);
             }
 
         })
