--- a/server/templates/nav_student.html
+++ b/server/templates/nav_student.html
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/student">Home</a>
           </li>
         </ul>
       </div>
@@ -18,8 +18,8 @@
             <i class="fa-solid fa-user"></i>
           </button>
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" style="position:absolute">
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li><a class="dropdown-item" href="#">My CV templates</a></li>
+            <li><a class="dropdown-item" href="/student/cvProfile">Profile</a></li>
+            <li><a class="dropdown-item" href="/student/cvRecord">My CV templates</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Logout</a></li>
           </ul>
