--- a/server/student/templates/student/cvRecord.html
+++ b/server/student/templates/student/cvRecord.html
@@ -1,38 +1,32 @@
 {% extends 'base.html'%} {% block header %}
 <link rel="stylesheet" type="text/css" href="../../static/student/cvCard.css">{% endblock %} {% block content %}
-
 <h3 style="text-align: center;">Your Cv Record</h3>
-    {% for cv in cv_list %}
-        <div class="card-container cardLayout">
-            <span class="pro">PRO</span>
-            <img class="round" src="https://randomuser.me/api/portraits/women/79.jpg" alt="user" />
-            <h3>{{cv.fristName}} {{cv.lastName}}</h3>
-            <h6>New York</h6>
-            <p>User interface designer and <br/> front-end developer</p>
-            <div class="buttons">
-                <button class="primary">
+{% for cv in cv_list %}
+<div class="card-container cardLayout">
+    <span class="pro">PRO</span>
+    <img class="round" src="https://randomuser.me/api/portraits/women/79.jpg" alt="user" />
+    <h3>{{cv.fristName}} {{cv.lastName}}</h3>
+    <h6>{{cv.nickName}}</h6>
+    <p style="text-align: justify;padding-left: 20px;padding-right: 20px;">{{cv.aboutMe}}</p>
+    <div class="buttons">
+        <button class="primary">
                     Edit
                 </button>
-                <button class="primary ghost">
+        <button class="primary ghost">
                     Delete
                 </button>
-            </div>
-            <div class="skills">
-                <h6>Skills</h6>
-                <ul>
-                    <li>UI / UX</li>
-                    <li>Front End Development</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>React</li>
-                    <li>Node</li>
-                </ul>
-            </div>
-        </div>
-    {% endfor %}
-
-{% comment %} <div class="card-container cardLayout">
+    </div>
+    <div class="skills">
+        <h6>Skills</h6>
+        <ul>
+            {% for student in studentLan%} {% for lan in student.language %}
+            <li>{{lan}}</li>
+            {% endfor %} {% endfor %}
+        </ul>
+    </div>
+</div>
+{% endfor %} {% comment %}
+<div class="card-container cardLayout">
     <span class="pro">PRO</span>
     <img class="round" src="https://randomuser.me/api/portraits/women/79.jpg" alt="user" />
     <h3>Ricky Park</h3>
