--- a/server/student/templates/student/cvProfile.html
+++ b/server/student/templates/student/cvProfile.html
@@ -3,133 +3,140 @@
 {% block header %}
 <link rel="stylesheet" type="text/css" href="/static/css/dynamic-fields.css" />
 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
 
 {% endblock %}
 
- 
+
 
 
 {% block content %}
 
-    <div class="container mt-4 text-dark">
-        
-        {% csrf_token %}
-        <div class="col-md-8 order-md-1" style="margin: 0 auto; width:auto;">
+<div class="container mt-4 text-dark">
 
-            <h4 class="mb-3">Personal Information</h4>
-            <form class="needs-validation" novalidate="">
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <label for="firstName">First name</label>
-                        <input type="text" class="form-control" id="fristName" placeholder="Frist Name" value="" required="">
-                        <div class="invalid-feedback">
-                            Valid first name is required.
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="lastName">Last name</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="Last Name" value="" required="">
-                        <div class="invalid-feedback">
-                            Valid last name is required.
-                        </div>
+    {% csrf_token %}
+    <div class="col-md-8 order-md-1" style="margin: 0 auto; width:auto;">
+
+        <h4 class="mb-3">Personal Information</h4>
+        <img src="" alt="Red dot" />
+        <form class="needs-validation" novalidate="" id="profile">
+            <div class="row">
+                <label class="form-label" for="customFile">Default file input example</label>
+                <input type="file" class="form-control" id="profileIcon" />
+                <div class="col-md-6 mb-3">
+                    <label for="firstName">First name</label>
+                    <input type="text" class="form-control" id="fristName" placeholder="Frist Name" value=""
+                        required="">
+                    <div class="invalid-feedback">
+                        Valid first name is required.
                     </div>
                 </div>
-
-                <div class="mb-3">
-                    <label for="username">Nick Name</label>
-                    <div class="input-group">
-
-                        <input type="text" class="form-control" id="nickName" placeholder="Nick Name" required>
-                        <div class="invalid-feedback" style="width: 100%;">
-                            Your username is required.
-                        </div>
+                <div class="col-md-6 mb-3">
+                    <label for="lastName">Last name</label>
+                    <input type="text" class="form-control" id="lastName" placeholder="Last Name" value="" required="">
+                    <div class="invalid-feedback">
+                        Valid last name is required.
                     </div>
                 </div>
+            </div>
 
-                <div class="mb-3">
-                    <label for="username">Phone number</label>
-                    <div class="input-group">
+            <div class="mb-3">
+                <label for="username">Nick Name</label>
+                <div class="input-group">
 
-                        <input type="text" class="form-control" id="phoneNumber" placeholder="Phone number" required="">
-                        <div class="invalid-feedback" style="width: 100%;">
-                            Your username is required.
-                        </div>
+                    <input type="text" class="form-control" id="nickName" placeholder="Nick Name" required>
+                    <div class="invalid-feedback" style="width: 100%;">
+                        Your username is required.
                     </div>
                 </div>
+            </div>
 
-                <div class="mb-3">
-                    <label for="username">Email</label>
-                    <div class="input-group">
+            <div class="mb-3">
+                <label for="username">Phone number</label>
+                <div class="input-group">
 
-                        <input type="text" class="form-control" id="email" placeholder="Email" required="">
-                        <div class="invalid-feedback" style="width: 100%;">
-                            Your username is required.
-                        </div>
+                    <input type="text" class="form-control" id="phoneNumber" placeholder="Phone number" required="">
+                    <div class="invalid-feedback" style="width: 100%;">
+                        Your username is required.
                     </div>
                 </div>
+            </div>
 
-                <div class="mb-3">
-                    <label for="username">About me</label>
-                    <div class="input-group">
-                        <textarea type="text" class="form-control skillBox" id="aboutMe" rows="5" placeholder="Description"></textarea>
+            <div class="mb-3">
+                <label for="username">Email</label>
+                <div class="input-group">
 
+                    <input type="text" class="form-control" id="email" placeholder="Email" required="">
+                    <div class="invalid-feedback" style="width: 100%;">
+                        Your username is required.
                     </div>
                 </div>
+            </div>
 
+            <div class="mb-3">
+                <label for="username">About me</label>
+                <div class="input-group">
+                    <textarea type="text" class="form-control skillBox" id="aboutMe" rows="5"
+                        placeholder="Description"></textarea>
 
-
-                <div class="mb-3">
-                    <div class="form-group" id="edu">
-
-                        <!-- input eduction data -->
-
-                    </div>
                 </div>
-
-                <div class="mb-3">
-                    <div class="form-group" id="experience">
-
-                        <!-- input experience data -->
+            </div>
 
 
-                    </div>
+
+            <div class="mb-3">
+                <div class="form-group" id="edu">
+
+                    <!-- input eduction data -->
+
                 </div>
+            </div>
 
-                <div class="mb-3">
-                    <label for="address">Language</label>
-                    <!-- <h1>Dynamic Fields Javascript</h1> -->
-                    <!-- <div class="wrapper"> -->
-                    <div id="survey_options">
-                        <input type="text" name="survey_options[]" class="survey_options skillBox" size="50" placeholder="language">
+            <div class="mb-3">
+                <div class="form-group" id="experience">
 
-                    </div>
-                    <div class="controls">
-                        <button type="button" id="add_more_fields" class="btn btn-primary">Add More</button>
-                        <button type="button" id="remove_fields" class="btn btn-danger">Delete</button>
+                    <!-- input experience data -->
 
-                    </div>
-                    <!-- </div> -->
+
                 </div>
+            </div>
+
+            <div class="mb-3">
+                <label for="address">Language</label>
+                <!-- <h1>Dynamic Fields Javascript</h1> -->
+                <!-- <div class="wrapper"> -->
+                <div id="survey_options">
+                    <input type="text" name="survey_options[]" class="survey_options skillBox" size="50"
+                        placeholder="language">
+
+                </div>
+                <div class="controls">
+                    <button type="button" id="add_more_fields" class="btn btn-primary">Add More</button>
+                    <button type="button" id="remove_fields" class="btn btn-danger">Delete</button>
+
+                </div>
+                <!-- </div> -->
+            </div>
 
 
 
 
 
-                <hr class="mb-4">
-                <button class="btn btn-primary btn-lg btn-block" type="submit" onclick="saveCv()" id="send">Continue to checkout</button>
-            </form>
-        </div>
+            <hr class="mb-4">
+            <button class="btn btn-primary btn-lg btn-block" type="submit" onclick="saveCv()" id="send">Continue to
+                checkout</button>
+        </form>
     </div>
+</div>
 
-    </div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script>
     //show edcution input
     for (var i = 0; i < 3; i++) {
         $('#edu').append('<b> <label for="exampleFormControlTextarea1">Education ', [i + 1], '</label></b><div id="add_experience-1"><div class="row"><div class="col-md-6 mb-3"><label for="schoolName">School Name</label><input type="text" class="form-control" id="schoolName" placeholder="School Name" value="" required></div><div class="col-md-6 mb-3"><label for="major">major</label><input type="text" class="form-control" id="major" placeholder="Major" value="" required=""></div></div><div class="row"><div class="col-md-6 mb-3"><label for="startDate">Start date</label><input type="date" class="form-control" style="margin-left: 10px" id="schoolStartDate" name="date"></div><div class="col-md-6 mb-3"><label for="endDate">End date</label><input type="date" class="form-control" id="schoolEndDate" name="date"></div></div</div>')
-            // console.log(i)
+        // console.log(i)
     }
 
     //show experience input
@@ -143,60 +150,75 @@
 
 
 
-        var schoolNames = $('input[id^=schoolName]').map(function(idx, elem) {
+        var schoolNames = $('input[id^=schoolName]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
         // console.log(schoolNames)
 
-        var majors = $('input[id^=major]').map(function(idx, elem) {
+        var majors = $('input[id^=major]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
         // console.log(majors)
 
-        var schoolStartDates = $('input[id^=schoolStartDate]').map(function(idx, elem) {
+        var schoolStartDates = $('input[id^=schoolStartDate]').map(function (idx, elem) {
             return new Date($(elem).val());
         }).get();
 
 
-        var schoolEndDates = $('input[id^=schoolEndDate]').map(function(idx, elem) {
+        var schoolEndDates = $('input[id^=schoolEndDate]').map(function (idx, elem) {
             return new Date($(elem).val());
         }).get();
 
 
 
-        var companyNames = $('input[id^=companyName]').map(function(idx, elem) {
+        var companyNames = $('input[id^=companyName]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
 
-        var companyStartDate = $('input[id^=companyStartDate]').map(function(idx, elem) {
+        var companyStartDate = $('input[id^=companyStartDate]').map(function (idx, elem) {
             return new Date($(elem).val());
         }).get();
         // console.log(companyStartDate)
 
-        var companyEndDate = $('input[id^=companyEndDate]').map(function(idx, elem) {
+        var companyEndDate = $('input[id^=companyEndDate]').map(function (idx, elem) {
             return new Date($(elem).val());
         }).get();
 
-
-        var description = $('textarea[id^=description]').map(function(idx, elem) {
+        console.log(companyEndDate)
+        var description = $('textarea[id^=description]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
 
 
-        var lan = $('input[name^=survey_options]').map(function(idx, elem) {
+        var lan = $('input[name^=survey_options]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
 
         // console.log(description)
 
+        // var file_data = new FormData()
+        // file_name = $("#profileIcon")[0].files[0]['name'] + $("#profileIcon")[0].files[0]['name'].substr($("#profileIcon")[0].files[0]['name'].length)
+        // console.log(file_name)
+        // console.log($("#profile"))
+        function getBase64(file) {
+            var reader = new FileReader();
+            reader.readAsDataURL(file);
+            reader.onload = function () {
+                console.log(reader.result);
+            };
+            reader.onerror = function (error) {
+                console.log('Error: ', error);
+            };
+        }
 
-
-
+        console.log(getBase64($("#profileIcon")[0].files[0]))
+        var profileIcon = getBase64($("#profileIcon")[0].files[0])
 
         $.ajax({
             url: "/student/create_cvProfile",
             type: 'POST',
             data: {
+                profileIcon: profileIcon,
                 fristName: $("#fristName").val(),
                 lastName: $("#lastName").val(),
                 nickName: $("#nickName").val(),
@@ -214,13 +236,13 @@
                 language: lan,
             },
             datatype: 'html',
-            success: function(result) {
+            success: function (result) {
                 //On success
                 console.log(result)
                 console.log(result.status)
 
             },
-            error: function(jqXHR, textStatus, errorThrown) {
+            error: function (jqXHR, textStatus, errorThrown) {
                 alert(jqXHR.responseText);
             }
 
@@ -244,7 +266,7 @@
     var add_more_fields = document.getElementById('add_more_fields');
     var remove_fields = document.getElementById('remove_fields');
 
-    add_more_fields.onclick = function() {
+    add_more_fields.onclick = function () {
         var newField = document.createElement('input');
         newField.setAttribute('type', 'text');
         newField.setAttribute('name', 'survey_options[]');
@@ -254,7 +276,7 @@
         survey_options.appendChild(newField);
     }
 
-    remove_fields.onclick = function() {
+    remove_fields.onclick = function () {
         var input_tags = survey_options.getElementsByTagName('input');
         if (input_tags.length > 1) {
             survey_options.removeChild(input_tags[(input_tags.length) - 1]);
