--- a/server/student/templates/student/cvProfile.html
+++ b/server/student/templates/student/cvProfile.html
@@ -1,16 +1,9 @@
-{% extends 'base.html' %}
-
-{% block header %}
+{% extends 'base.html' %} {% block header %}
 <link rel="stylesheet" type="text/css" href="/static/css/dynamic-fields.css" />
 
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
 
-{% endblock %}
-
-
-
-
-{% block content %}
+{% endblock %} {% block content %}
 
 <div class="container mt-4 text-dark">
 
@@ -18,15 +11,13 @@
     <div class="col-md-8 order-md-1" style="margin: 0 auto; width:auto;">
 
         <h4 class="mb-3">Personal Information</h4>
-        <img src="" alt="Red dot" />
         <form class="needs-validation" novalidate="" id="profile">
             <div class="row">
                 <label class="form-label" for="customFile">Default file input example</label>
                 <input type="file" class="form-control" id="profileIcon" />
                 <div class="col-md-6 mb-3">
                     <label for="firstName">First name</label>
-                    <input type="text" class="form-control" id="fristName" placeholder="Frist Name" value=""
-                        required="">
+                    <input type="text" class="form-control" id="fristName" placeholder="Frist Name" value="" required="">
                     <div class="invalid-feedback">
                         Valid first name is required.
                     </div>
@@ -76,8 +67,7 @@
             <div class="mb-3">
                 <label for="username">About me</label>
                 <div class="input-group">
-                    <textarea type="text" class="form-control skillBox" id="aboutMe" rows="5"
-                        placeholder="Description"></textarea>
+                    <textarea type="text" class="form-control skillBox" id="aboutMe" rows="5" placeholder="Description"></textarea>
 
                 </div>
             </div>
@@ -106,8 +96,7 @@
                 <!-- <h1>Dynamic Fields Javascript</h1> -->
                 <!-- <div class="wrapper"> -->
                 <div id="survey_options">
-                    <input type="text" name="survey_options[]" class="survey_options skillBox" size="50"
-                        placeholder="language">
+                    <input type="text" name="survey_options[]" class="survey_options skillBox" size="50" placeholder="language">
 
                 </div>
                 <div class="controls">
@@ -129,68 +118,79 @@
     </div>
 </div>
 
-</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script>
     //show edcution input
-    for (var i = 0; i < 3; i++) {
-        $('#edu').append('<b> <label for="exampleFormControlTextarea1">Education ', [i + 1], '</label></b><div id="add_experience-1"><div class="row"><div class="col-md-6 mb-3"><label for="schoolName">School Name</label><input type="text" class="form-control" id="schoolName" placeholder="School Name" value="" required></div><div class="col-md-6 mb-3"><label for="major">major</label><input type="text" class="form-control" id="major" placeholder="Major" value="" required=""></div></div><div class="row"><div class="col-md-6 mb-3"><label for="startDate">Start date</label><input type="date" class="form-control" style="margin-left: 10px" id="schoolStartDate" name="date"></div><div class="col-md-6 mb-3"><label for="endDate">End date</label><input type="date" class="form-control" id="schoolEndDate" name="date"></div></div</div>')
-        // console.log(i)
+    // for (var i = 0; i < 3; i++) {
+    //     $('#edu').append('<b> <label for="exampleFormControlTextarea1">Education ', [i + 1], '</label></b><div id="add_experience-1"><div class="row"><div class="col-md-6 mb-3"><label for="schoolName">School Name</label><input type="text" class="form-control" id="schoolName" placeholder="School Name" value="" required></div><div class="col-md-6 mb-3"><label for="major">major</label><input type="text" class="form-control" id="major" placeholder="Major" value="" required=""></div></div><div class="row"><div class="col-md-6 mb-3"><label for="startDate">Start date</label><input type="date" class="form-control" style="margin-left: 10px" id="schoolStartDate" name="date"></div><div class="col-md-6 mb-3"><label for="endDate">End date</label><input type="date" class="form-control" id="schoolEndDate" name="date"></div></div</div>')
+    //         // console.log(i)
+    // }
+
+    // //show experience input
+    // for (var i = 0; i < 3; i++) {
+    //     $('#experience').append('<b> <label for="exampleFormControlTextarea1">Experience ', [i + 1], '</label></b><div id="inputBox_options"></div><div id="add_experience-1"><input type="text" id="companyName" class="survey_options skillBox" size="50" placeholder="Company Name" required><div class="row"><div class="col-md-6 mb-3"><label for="firstName">Start date</label><input type="date" class="form-control" style="margin-left: 10px" id="companyStartDate" name="Date"></div><div class="col-md-6 mb-3"><label for="lastName">End date</label><input type="date" class="form-control" id="companyEndDate" name="date"></div></div><textarea type="text" class="form-control skillBox"  id="description" rows="5" placeholder="Description"></textarea></div>')
+    // }
+    function getBase64(file) {
+        var reader = new FileReader();
+        reader.readAsDataURL(file);
+        reader.onload = function() {
+            // console.log(reader.result);
+            return reader.result
+
+        };
+        reader.onerror = function(error) {
+            console.log('Error: ', error);
+        };
     }
 
-    //show experience input
-    for (var i = 0; i < 3; i++) {
-        $('#experience').append('<b> <label for="exampleFormControlTextarea1">Experience ', [i + 1], '</label></b><div id="inputBox_options"></div><div id="add_experience-1"><input type="text" id="companyName" class="survey_options skillBox" size="50" placeholder="Company Name" required><div class="row"><div class="col-md-6 mb-3"><label for="firstName">Start date</label><input type="date" class="form-control" style="margin-left: 10px" id="companyStartDate" name="Date"></div><div class="col-md-6 mb-3"><label for="lastName">End date</label><input type="date" class="form-control" id="companyEndDate" name="date"></div></div><textarea type="text" class="form-control skillBox"  id="description" rows="5" placeholder="Description"></textarea></div>')
-    }
+
 
 
     function saveCv() {
 
-
-
-
-        var schoolNames = $('input[id^=schoolName]').map(function (idx, elem) {
+        var schoolNames = $('input[id^=schoolName]').map(function(idx, elem) {
+            D
             return $(elem).val();
         }).get();
         // console.log(schoolNames)
 
-        var majors = $('input[id^=major]').map(function (idx, elem) {
+        var majors = $('input[id^=major]').map(function(idx, elem) {
             return $(elem).val();
         }).get();
         // console.log(majors)
 
-        var schoolStartDates = $('input[id^=schoolStartDate]').map(function (idx, elem) {
+        var schoolStartDates = $('input[id^=schoolStartDate]').map(function(idx, elem) {
             return new Date($(elem).val());
         }).get();
 
 
-        var schoolEndDates = $('input[id^=schoolEndDate]').map(function (idx, elem) {
+        var schoolEndDates = $('input[id^=schoolEndDate]').map(function(idx, elem) {
             return new Date($(elem).val());
         }).get();
 
 
 
-        var companyNames = $('input[id^=companyName]').map(function (idx, elem) {
+        var companyNames = $('input[id^=companyName]').map(function(idx, elem) {
             return $(elem).val();
         }).get();
 
-        var companyStartDate = $('input[id^=companyStartDate]').map(function (idx, elem) {
+        var companyStartDate = $('input[id^=companyStartDate]').map(function(idx, elem) {
             return new Date($(elem).val());
         }).get();
         // console.log(companyStartDate)
 
-        var companyEndDate = $('input[id^=companyEndDate]').map(function (idx, elem) {
+        var companyEndDate = $('input[id^=companyEndDate]').map(function(idx, elem) {
             return new Date($(elem).val());
         }).get();
 
-        console.log(companyEndDate)
-        var description = $('textarea[id^=description]').map(function (idx, elem) {
+        // console.log(companyEndDate)
+        var description = $('textarea[id^=description]').map(function(idx, elem) {
             return $(elem).val();
         }).get();
 
 
-        var lan = $('input[name^=survey_options]').map(function (idx, elem) {
+        var lan = $('input[name^=survey_options]').map(function(idx, elem) {
             return $(elem).val();
         }).get();
 
@@ -200,25 +200,32 @@
         // file_name = $("#profileIcon")[0].files[0]['name'] + $("#profileIcon")[0].files[0]['name'].substr($("#profileIcon")[0].files[0]['name'].length)
         // console.log(file_name)
         // console.log($("#profile"))
-        function getBase64(file) {
-            var reader = new FileReader();
-            reader.readAsDataURL(file);
-            reader.onload = function () {
-                console.log(reader.result);
-            };
-            reader.onerror = function (error) {
-                console.log('Error: ', error);
-            };
+
+
+        var file = $("#profileIcon")[0].files[0];
+        var reader = new FileReader();
+
+        reader.onloadend = function() {
+
+            imagebase64 = reader.result;
+
         }
 
-        console.log(getBase64($("#profileIcon")[0].files[0]))
-        var profileIcon = getBase64($("#profileIcon")[0].files[0])
+        reader.readAsDataURL(file);
+
+
+
+
+        console.log(imagebase64)
+
+        // console.log(getBase64(file))
+
 
         $.ajax({
             url: "/student/create_cvProfile",
             type: 'POST',
             data: {
-                profileIcon: profileIcon,
+                profileIcon: imagebase64,
                 fristName: $("#fristName").val(),
                 lastName: $("#lastName").val(),
                 nickName: $("#nickName").val(),
@@ -236,13 +243,14 @@
                 language: lan,
             },
             datatype: 'html',
-            success: function (result) {
+            success: function(result) {
                 //On success
+
                 console.log(result)
-                console.log(result.status)
+                    // console.log(result.status)
 
             },
-            error: function (jqXHR, textStatus, errorThrown) {
+            error: function(jqXHR, textStatus, errorThrown) {
                 alert(jqXHR.responseText);
             }
 
@@ -266,7 +274,7 @@
     var add_more_fields = document.getElementById('add_more_fields');
     var remove_fields = document.getElementById('remove_fields');
 
-    add_more_fields.onclick = function () {
+    add_more_fields.onclick = function() {
         var newField = document.createElement('input');
         newField.setAttribute('type', 'text');
         newField.setAttribute('name', 'survey_options[]');
@@ -276,7 +284,7 @@
         survey_options.appendChild(newField);
     }
 
-    remove_fields.onclick = function () {
+    remove_fields.onclick = function() {
         var input_tags = survey_options.getElementsByTagName('input');
         if (input_tags.length > 1) {
             survey_options.removeChild(input_tags[(input_tags.length) - 1]);
