--- a/server/student/templates/student/cvProfile.html
+++ b/server/student/templates/student/cvProfile.html
@@ -12,9 +12,19 @@
 
         <h4 class="mb-3">Personal Information</h4>
         <form class="needs-validation" novalidate="" id="profile">
+
             <div class="row">
-                <label class="form-label" for="customFile">Default file input example</label>
-                <input type="file" class="form-control" id="profileIcon" />
+                <div class="col-12 mb-3 d-flex justify-content-center">
+                    <img class="rounded-circle" src="/static/images/default-avatar.png" style="width: 180px; height: 180px; object-fit:cover" id="icon-preview">
+                </div>
+
+                <div class="col-12 mb-3">
+                    <label class="form-label" for="profileIcon">Upload your portrait</label>
+                    <input type="file" class="form-control" id="profileIcon" />
+                </div>
+
+
+
                 <div class="col-md-6 mb-3">
                     <label for="firstName">First name</label>
                     <input type="text" class="form-control" id="fristName" placeholder="Frist Name" value="" required="">
@@ -22,6 +32,8 @@
                         Valid first name is required.
                     </div>
                 </div>
+                
+
                 <div class="col-md-6 mb-3">
                     <label for="lastName">Last name</label>
                     <input type="text" class="form-control" id="lastName" placeholder="Last Name" value="" required="">
@@ -121,6 +133,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script>
+    var base64ImgProfileIcon = '';
     //show edcution input
     for (var i = 0; i < 3; i++) {
         $('#edu').append('<b> <label for="exampleFormControlTextarea1">Education ', [i + 1], '</label></b><div id="add_experience-1"><div class="row"><div class="col-md-6 mb-3"><label for="schoolName">School Name</label><input type="text" class="form-control" id="schoolName" placeholder="School Name" value="" required></div><div class="col-md-6 mb-3"><label for="major">major</label><input type="text" class="form-control" id="major" placeholder="Major" value="" required=""></div></div><div class="row"><div class="col-md-6 mb-3"><label for="startDate">Start date</label><input type="date" class="form-control" style="margin-left: 10px" id="schoolStartDate" name="date"></div><div class="col-md-6 mb-3"><label for="endDate">End date</label><input type="date" class="form-control" id="schoolEndDate" name="date"></div></div</div>')
@@ -151,7 +164,7 @@
     function saveCv() {
 
         var schoolNames = $('input[id^=schoolName]').map(function(idx, elem) {
-            D
+            
             return $(elem).val();
         }).get();
         // console.log(schoolNames)
@@ -202,22 +215,17 @@
         // console.log(file_name)
         // console.log($("#profile"))
 
-
+        /*
         var file = $("#profileIcon")[0].files[0];
         var reader = new FileReader();
 
         reader.onloadend = function() {
-
             imagebase64 = reader.result;
-
         }
 
         reader.readAsDataURL(file);
-
-
-
-
         console.log(imagebase64)
+        */
 
         // console.log(getBase64(file))
 
@@ -226,7 +234,7 @@
             url: "/student/create_cvProfile",
             type: 'POST',
             data: {
-                profileIcon: imagebase64,
+                profileIcon: base64ImgProfileIcon,
                 fristName: $("#fristName").val(),
                 lastName: $("#lastName").val(),
                 nickName: $("#nickName").val(),
@@ -262,13 +270,19 @@
 
 
 
-
-
-
-
-
     $("#send").click((e) => {
         e.preventDefault()
+    })
+
+    $("#profileIcon").change((e)=>{
+        let file = $("#profileIcon")[0].files[0]
+        const reader = new FileReader()
+        reader.readAsDataURL(file)
+        reader.onload = function () {
+            const base64String = reader.result
+            base64ImgProfileIcon = base64String //global
+            $("#icon-preview").attr("src",base64String)
+          };
     })
 
     var survey_options = document.getElementById('survey_options');
